# pyprofiler

./: .gitignore  AGENTS.md  OPTIMIZATION_REPORT.md  PROFILING_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py  test_imports.py
benchmarks/: REAL_WORLD_PROFILING_RESULTS.md  RUST_COMPARISON_REPORT.md  benchmark_workload.py  real_world_baseline.py  run_comparison.py
docs/: USAGE.md  design.md  implementation_plan.md
examples/: flamegraph_example.py  memory_profile.py  real_world_example.py  simple_profile.py  simple_test.py
experiments/: REVIEW_20260119.md  VERIFICATION_20260119.md  profiler_demo_output.py  test_sample.py  test_three_projects.py  verify_batch_optimization.py  verify_improvement.py  verify_improvement2.py  verify_improvement3.py  verify_improvement4.py  verify_logging_optimization.py
logs/: development_log.md
src/pyprofiler/: __init__.py  __main__.py  memory_profiler.py  profiler.py
src/pyprofiler/models/: __init__.py  call_frame.py  function_stats.py  profiler_stats.py
src/pyprofiler/reporters/: __init__.py  console.py  flamegraph.py
src/pyprofiler/utils/: __init__.py  stack_trace.py  timer.py
tests/: __init__.py  test_cpu_profiler.py
tests/fixtures/: sample_code.py
